apps/fluxv2-podinfo-demo/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fluxv2-podinfo-demo
  labels:
    app.kubernetes.io/part-of: fluxv2-demo
