apps/fluxv2-podinfo-demo/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fluxv2-podinfo-demo
  namespace: fluxv2-podinfo-demo
  labels:
    app: fluxv2-podinfo-demo
spec:
  type: NodePort
  selector:
    app: fluxv2-podinfo-demo
  ports:
    - port: 9898
      targetPort: 9898
      protocol: TCP
